<resources>
    <string name="app_name">AndroidExtra</string>
    <string name="gender">Genero</string>
    <string name="man">Masculino</string>
    <string name="woman">Femenino</string>
    <string name="height">Altura</string>
    <string name="bmi_calories">IMC + Calorias</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="remove">remove</string>
    <string name="add">add</string>
    <string name="bmi">IMC</string>
    <string name="calories_consume">Calorias para consumir</string>
    <string name="calories_dairy">Calorias Diarias</string>
    <string name="low_bmi">Peso Inferior</string>
    <string name="normal_bmi">Peso Normal</string>
    <string name="height_total">%1$d cm</string>
    <string name="height_base">150 cm</string>
    <string name="over_bmi">Sobrepeso</string>
    <string name="obesity_bmi">Obesidad</string>
    <string name="re_calculate">Re-Calcular</string>
    <string name="calculate">Calcular</string>

    <string name="item1_1">Sedentario</string>
    <string name="item1_2">ocasionalmente</string>
    <string name="item2_1">Low</string>
    <string name="item2_2">1 o 3 veces por semana</string>
    <string name="item3_1">Moderate</string>
    <string name="item3_2">3 o 5 veces por semana</string>
    <string name="item4_1">High</string>
    <string name="item4_2">6 o 7 veces por semana</string>
    <string name="item5_1">Intense</string>
    <string name="item5_2">+4 horas diarias</string>


<!--todoList-->
    <string name="todo_list">TODO List</string>
    <string name="todo_salute">Bienvenido, Rubén</string>
    <string name="progress">Progreso:</string>
    <string name="categories">Categorias:</string>
    <string name="tasks">Tareas:</string>
    <string name="add_todo">Add Todo</string>
    <string name="task_name">Nombre de la tarea</string>
    <string name="business">Negocios</string>
    <string name="personal">Personal</string>
    <string name="other">Otros</string>
    <string name="todo_add_task">Añadir Tarea</string>


    <string name="error">ERROR</string>
</resources>